# human-activity-monitor

./: .gitignore  CMakeLists.txt  README.md
Chronos/: Chronos_ACCDATA.sln
Chronos/Chronos_ACCDATA/: Accel.csv  Accel2.csv  Accel3.csv  Chronos_ACCDATA.py  Chronos_ACCDATA.pyproj
Human-Activity-Monitor/: Human-Activity-Monitor.pro  OpenCVViewer.cpp  OpenCVViewer.h  mainwindow.cpp  mainwindow.h  mainwindow.ui  statsgraph.cpp  statsgraph.h
assets/: ActivityGraphing.xlsx  BayesPreset  BayesPresetXYZ  flap_blur.avi
build-Human-Activity-Monitor-Desktop_Qt_5_5_0_MinGW_32bit-Debug/: Makefile  Makefile.Debug  Makefile.Release
build-Human-Activity-Monitor-Desktop_Qt_5_5_0_MinGW_32bit-Debug/debug/: moc_mainwindow.cpp
lib/opencv/sources/cmake/: OpenCVCompilerOptions.cmake
lib/opencv/sources/modules/videoio/src/: cap_dshow.cpp
lib/opencv/x86/vc12/lib/: opencv_calib3d2410.lib  opencv_calib3d2410d.lib  opencv_contrib2410.lib  opencv_contrib2410d.lib  opencv_core2410.lib  opencv_core2410d.lib  opencv_features2d2410.lib  opencv_features2d2410d.lib  opencv_flann2410.lib  opencv_flann2410d.lib  opencv_gpu2410.lib  opencv_gpu2410d.lib  opencv_haartraining_engine.lib  opencv_haartraining_engined.lib  opencv_highgui2410.lib  opencv_highgui2410d.lib  opencv_imgproc2410.lib  opencv_imgproc2410d.lib  opencv_legacy2410.lib  opencv_legacy2410d.lib  opencv_ml2410.lib  opencv_ml2410d.lib  opencv_nonfree2410.lib  opencv_nonfree2410d.lib  opencv_objdetect2410.lib  opencv_objdetect2410d.lib  opencv_ocl2410.lib  opencv_ocl2410d.lib  opencv_photo2410.lib  opencv_photo2410d.lib  opencv_stitching2410.lib  opencv_stitching2410d.lib  opencv_superres2410.lib  opencv_superres2410d.lib  opencv_video2410.lib  opencv_video2410d.lib  opencv_videostab2410.lib  opencv_videostab2410d.lib
lib/opencv/x86/vc14/lib/: OpenCVModules-debug.cmake  OpenCVModules-release.cmake  OpenCVModules.cmake  opencv_calib3d2411.lib  opencv_calib3d2411d.lib  opencv_contrib2411.lib  opencv_contrib2411d.lib  opencv_core2411.lib  opencv_core2411d.lib  opencv_features2d2411.lib  opencv_features2d2411d.lib  opencv_flann2411.lib  opencv_flann2411d.lib  opencv_gpu2411.lib  opencv_gpu2411d.lib  opencv_haartraining_engine.lib  opencv_haartraining_engined.lib  opencv_highgui2411.lib  opencv_highgui2411d.lib  opencv_imgproc2411.lib  opencv_imgproc2411d.lib  opencv_legacy2411.lib  opencv_legacy2411d.lib  opencv_ml2411.lib  opencv_ml2411d.lib  opencv_nonfree2411.lib  opencv_nonfree2411d.lib  opencv_objdetect2411.lib  opencv_objdetect2411d.lib  opencv_ocl2411.lib  opencv_ocl2411d.lib  opencv_photo2411.lib  opencv_photo2411d.lib  opencv_stitching2411.lib  opencv_stitching2411d.lib  opencv_superres2411.lib  opencv_superres2411d.lib  opencv_video2411.lib  opencv_video2411d.lib  opencv_videostab2411.lib  (+1 more)
prototype/: BayesTrainer.cpp  ColorTrackingTest.cpp  ContourTest.cpp  lefthand.cpp
src/: ColorProfiler.cpp  ColorProfiler.h  Filter.cpp  Filter.h  GaussianBayesClassifier.cpp  GaussianBayesClassifier.h  HSVRange.h  HandFinder.cpp  HandFinder.h  HandTracker.cpp  HandTracker.h  NaiveBayesClassifier.cpp  NaiveBayesClassifier.h  Object.h  ObjectFinder.cpp  ObjectFinder.h  Region.cpp  Region.h  RegionFinder.cpp  RegionFinder.h  Stats.h  StatsGenerator.cpp  StatsGenerator.h  main.cpp
src/prototype/: FaceDetectTest.cpp
